# git-remote-icp

./: .gitconfig  .gitignore  Cargo.toml  README.md  flake.nix  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub  identity.pem  secp256k1-pub.pem
.github/workflows/: ci.yml  nix.yml
crates/git-remote-helper/: Cargo.toml
crates/git-remote-helper/src/: git_remote_icp.rs  git_remote_tcp.rs  lib.rs
crates/git-remote-helper/src/cli/: mod.rs
crates/git-remote-helper/src/commands/: fetch.rs  list.rs  mod.rs  push.rs
crates/git-remote-helper/src/git/: mod.rs
crates/git-remote-helper/src/git/config/: mod.rs
crates/git-remote-helper/src/git/service/: mod.rs
crates/git-remote-helper/src/git/service/receive_pack/response/: mod.rs
crates/git-remote-helper/src/git/service/receive_pack/response/report_status_v2/: mod.rs
crates/git-remote-helper/src/git/service/receive_pack/response/report_status_v2/tests/: mod.rs
crates/git-remote-helper/src/git/service/receive_pack/response/report_status_v2/tests/fixture/: async_io.rs  blocking_io.rs  mod.rs
crates/git-remote-helper/src/git/transport/client/tcp/: connect.rs
crates/git-remote-http-reqwest/: Cargo.toml
crates/git-remote-http-reqwest/src/: connect.rs  main.rs
crates/git-remote-ic/: Cargo.toml
crates/git-remote-ic/src/: main.rs
crates/git-remote-icp/: Cargo.toml
crates/git-remote-icp/src/: async_io.rs  config.rs  connect.rs  main.rs
crates/git-remote-icp/src/cli/: mod.rs
crates/git-remote-icp/src/commands/: fetch.rs  list.rs  mod.rs  push.rs
crates/git-remote-icp/src/git/config/: mod.rs
crates/git-remote-icp/src/git/transport/client/: mod.rs
crates/git-remote-icp/src/git/transport/client/icp/: async_io.rs  connect.rs  connection.rs  mod.rs
crates/git-remote-icp/src/http/: mod.rs
crates/git-remote-icp/src/http/reqwest/: mod.rs  remote.rs
crates/git-remote-icp/src/report_status_v2/: mod.rs
crates/git-remote-icp/src/transport/: icp.rs  mod.rs  tcp.rs
crates/git-remote-tcp/: Cargo.toml
crates/git-remote-tcp/src/: connect.rs  main.rs
nix/: git-remote-helper.nix  git-remote-tcp.nix
