[package]
name = "git-remote-helper"
description = "Git remote helper"
version = "0.1.0"
edition = "2021"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[features]
# blocking-http-client  = ["git-repository/http-client-reqwest", "maybe-async/is_sync"]
blocking-http-client = ["git-repository/async-network-client-async-std"]
async-network-client = ["git-repository/async-network-client-async-std"]

[dependencies]
anyhow = { workspace = true }
# async-trait = "0.1"
# bstr = "1.0"
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99"
env_logger = { workspace = true }
git-repository = { workspace = true }
git-validate = { workspace = true }
log = { workspace = true }
nom = "7.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
maybe-async = "0.2"
