[package]
name = "git-remote-helper"
description = "Git remote helper"
version = "0.1.0"
edition = "2021"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[features]
blocking-network-client  = ["git-repository/blocking-network-client"]
async-network-client = ["git-repository/async-network-client"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99"
git-repository = { workspace = true }
git-validate = { workspace = true }
log = { workspace = true }
nom = "7.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
maybe-async = "0.2"
