[package]
name = "git-remote-ic"
description = "A Git remote helper for the Internet Computer"
version = "0.1.0"
edition = "2021"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[[bin]]
name = "git-remote-ic"

[dependencies]
anyhow = "1.0"
bstr = "1.0"
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
# git-features = { git = "https://github.com/Byron/gitoxide", rev="375051fa97d79f95fa7179b536e616c4aefd88e2" }
git-features = { path = "/Users/py/projects/Byron/gitoxide/paulyoung/reqwest-client-builder/git-features" }
# git-protocol = { git = "https://github.com/Byron/gitoxide", rev="375051fa97d79f95fa7179b536e616c4aefd88e2", features = ["blocking-client"] }
git-protocol = { path = "/Users/py/projects/Byron/gitoxide/paulyoung/reqwest-client-builder/git-protocol", features = ["blocking-client"] }
# git-repository = { git = "https://github.com/Byron/gitoxide", rev="375051fa97d79f95fa7179b536e616c4aefd88e2", features = ["blocking-network-client"] }
git-repository = { path = "/Users/py/projects/Byron/gitoxide/paulyoung/reqwest-client-builder/git-repository", features = ["blocking-network-client"]  }
# git-transport = { git = "https://github.com/Byron/gitoxide", rev="375051fa97d79f95fa7179b536e616c4aefd88e2", features = ["http-client-reqwest"] }
git-transport = { path = "/Users/py/projects/Byron/gitoxide/paulyoung/reqwest-client-builder/git-transport", features = ["http-client-reqwest"] }
http-sig = { git = "https://github.com/dskyberg/http-signatures", branch = "ietf-httpbis-skyberg" }
lazy_static = "1.4"
log = "0.4"
reqwest = "0.11"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
