[package]
name = "git-remote-icp"
description = "A Git remote helper for the Internet Computer Protocol"
version = "0.1.0"
edition = "2021"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[[bin]]
name = "git-remote-icp"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bstr = "1.0"
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99"
env_logger = "0.9"
git-repository = { git = "https://github.com/paulyoung/gitoxide", rev="4753e641eada72f4e944811ea85390481444b210", features = ["async-network-client-async-std"] }
git-validate = { git = "https://github.com/paulyoung/gitoxide", rev="4753e641eada72f4e944811ea85390481444b210" }
log = "0.4"
nom = "7.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
