[package]
name = "git-remote-icp"
description = "A Git remote helper for the Internet Computer Protocol"
version = "0.1.0"
edition = "2021"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[[bin]]
name = "git-remote-icp"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bstr = "1.0"
candid = "0.8"
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99"
env_logger = "0.9"
git-repository = { git = "https://github.com/paulyoung/gitoxide", rev="4753e641eada72f4e944811ea85390481444b210", features = ["async-network-client-async-std"] }
git-validate = { git = "https://github.com/paulyoung/gitoxide", rev="4753e641eada72f4e944811ea85390481444b210" }
ic-agent = "0.23"
# When using ic-certified-assets = "0.2" we get an error that CandidType isn't
# implemented for HttpRequest even though it is. This appears to be because it
# uses candid 0.7 when we are using candid 0.8. This commit isn't on crates.io
# but depends on candid 0.8.
ic-certified-assets = { git = "https://github.com/dfinity/sdk", rev="763c2bb35bcba5cee34ecc08a991252f474e631e" }
log = "0.4"
nom = "7.0"
serde_bytes = "0.11"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
